--- a/index.html
+++ b/index.html
@@ -110,27 +110,24 @@
     </div>
   </section>
 
-  <section class="gallery" id="gallery">
+ <section class="gallery" id="gallery">
   <h2>Галерея работ</h2>
   <div class="gallery-carousel">
     <button class="carousel-btn prev" aria-label="Назад">&#8592;</button>
-    <div class="carousel-track">
-      <img src="img/work1.jpg" alt="Работа 1">
-      <img src="img/work2.jpg" alt="Работа 2">
-      <img src="img/work3.jpg" alt="Работа 3">
-      <img src="img/work4.jpg" alt="Работа 4">
-      <img src="img/work5.jpg" alt="Работа 5">
-      <img src="img/work6.jpg" alt="Работа 6">
+    <div class="carousel-track-wrapper">
+      <div class="carousel-track">
+        <img src="img/work1.jpg" alt="Работа 1">
+        <img src="img/work2.jpg" alt="Работа 2">
+        <img src="img/work3.jpg" alt="Работа 3">
+        <img src="img/work4.jpg" alt="Работа 4">
+        <img src="img/work5.jpg" alt="Работа 5">
+        <img src="img/work6.jpg" alt="Работа 6">
+      </div>
     </div>
     <button class="carousel-btn next" aria-label="Вперёд">&#8594;</button>
+    <div class="carousel-dots"></div>
   </div>
-  <div class="carousel-dots"></div>
 </section>
-
-  <section class="sw-section" id="reviews">
-    <h2>Отзывы и обратная связь</h2>
-    <div class="sw-app" data-app="b1bba21e31b61727e9c357d9edaf4b60"></div>
-  </section>
 
   <section class="contacts" id="contacts">
     <h2>Контакты</h2>
