--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
     </div>
   </section>
 
- <section class="gallery" id="gallery">
+  <section class="gallery" id="gallery">
   <h2>Галерея работ</h2>
   <div class="gallery-carousel">
-    <button class="carousel-btn prev" aria-label="Назад">&#8592;</button>
     <div class="carousel-track-wrapper">
+      <button class="carousel-btn prev" aria-label="Назад">&#8592;</button>
       <div class="carousel-track">
         <img src="img/work1.jpg" alt="Работа 1">
         <img src="img/work2.jpg" alt="Работа 2">
@@ -123,12 +123,13 @@
         <img src="img/work5.jpg" alt="Работа 5">
         <img src="img/work6.jpg" alt="Работа 6">
       </div>
+      <button class="carousel-btn next" aria-label="Вперёд">&#8594;</button>
     </div>
-    <button class="carousel-btn next" aria-label="Вперёд">&#8594;</button>
     <div class="carousel-dots"></div>
   </div>
 </section>
-
+<script src="https://res.smartwidgets.ru/app.js" defer></script>
+<div class="sw-app" data-app="b1bba21e31b61727e9c357d9edaf4b60"></div>
   <section class="contacts" id="contacts">
     <h2>Контакты</h2>
     <div class="contacts-info">
